versioned_docs/version-0.8/reference/model/file.md
---
title: "file"
linkTitle: "file"
type: "docs"
description: file system functions
weight: 100
---

## read

`read(filepath: str) -> str`

Read the contents of the file `filepath` and return a string instance.

## glob

`glob(pattern: str) -> str`

Return a list containing all file names that match `pattern`.

## modpath

`modpath() -> str`

Return the root path of the current KCL module (kcl.mod file path or single \*.k file path).

## workdir

`workdir() -> str`

Return the path of the current working directory.

## exists

`exists(filepath: str) -> bool`

Whether this file path exists. Returns true if the path points at an existing entity. This function will traverse symbolic links to query information about the destination file.

## abs

`abs(filepath: str) -> str`

Returns the canonical, absolute form of the path with all intermediate components normalized and symbolic links resolved.

## mkdir

`mkdir(directory: str, exists: bool=False)`

Create a new directory at the specified path if it doesn't already exist.

## delete

`delete(directory: str)`

Delete a file or an empty directory at the specified path.

## cp

`cp(src: str, dest: str)`

Copy a file or directory from the source path to the destination path.

## mv

`mv(src: str, dest: str)`

Move a file or directory from the source path to the destination path.

## size

`size(filepath: str) -> int`

Get the size of a file at the specified path.

## write

`write(filepath: str, content: str)`

Write content to a file at the specified path. If the file doesn't exist, it will be created. If it does exist, its content will be replaced.
